==> nachikethKarthik/lab8/ProjectSource/MotorService.c <==
#include "../ProjectHeaders/MotorService.h"
#include "../ProjectHeaders/EncoderIC.h"
#include "ADService.h"
#include <xc.h>
#include "ES_Configure.h"
#include "ES_Framework.h"
#include "ES_DeferRecall.h"
#include "ES_Port.h"
#include "terminal.h"
#include "dbprintf.h"
#define PBCLK_HZ 20000000UL
#define PWM_FREQ_HZ 10000UL
#define T2_PRESCALE  4
#define ENCODER_CHECK_MS 10
#define T3_PRESCALE  4
#define PPR 512

bool InitMotorService(uint8_t Priority)
{
  ES_Event_t ThisEvent;
  //DB_printf("Start\n");

  MyPriority = Priority;
  /********************************************
   in here you write your initialization code
   *******************************************/
  // post the initial transition event
  TRISBbits.TRISB9 = 1;
  
  TRISBbits.TRISB8 = 0;
  
  TRISBbits.TRISB10 = 0;
  TRISBbits.TRISB11 = 0;
  LATBbits.LATB10 = 1;
  LATBbits.LATB11 = 0;
  
  InitLED();
  TRISBbits.TRISB15 = 0;
  TRISBbits.TRISB13 = 0;
  TRISBbits.TRISB12 = 0;
  InitPWM();
  SetDuty(0);
  EncoderIC_Init();
  
  ES_Timer_InitTimer(ENCODER_TIMER, ENCODER_CHECK_MS);
  ES_Timer_InitTimer(PRINT_TIMER, 100);
  ThisEvent.EventType = ES_INIT;
  if (ES_PostToService(MyPriority, ThisEvent) == true)
  {
    return true;
  }
  else
  {
    return false;
  }
}

ES_Event_t RunMotorService(ES_Event_t ThisEvent)
{
  ES_Event_t ReturnEvent;
  ReturnEvent.EventType = ES_NO_EVENT; // assume no errors

  switch(ThisEvent.EventType){
      case ES_INIT:
          break;
                
      case ES_AD:
          adc = ThisEvent.EventParam;
          //DB_printf("%d\n",adc);
          duty = ((uint32_t)adc * 100UL) / 1023UL;
          SetDuty((uint8_t)duty);
          break;
          
      case ES_TIMEOUT:
          if (ThisEvent.EventParam == ENCODER_TIMER){
              ES_Timer_InitTimer(ENCODER_TIMER, ENCODER_CHECK_MS);
              
              period = EncoderIC_GetPeriodTicks32(&newEdge);
              //DB_printf("period = %d, newEdge = %d, RB9 output = %d\n",period,newEdge, PORTBbits.RB9);
              if(newEdge) MapPeriodToBars(period);
              
              break;
              
          }else if (ThisEvent.EventParam == PRINT_TIMER){
              ES_Timer_InitTimer(PRINT_TIMER, 100);
              LATBbits.LATB13 = 1;
              uint16_t RPM = (60 * PBCLK_HZ)/(T3_PRESCALE * period * PPR);
              LATBbits.LATB13 = 0;
              LATBbits.LATB12 = 1;
              DB_printf("Duty_cycle is %d, RPM is %d\n", duty, RPM);
              LATBbits.LATB12 = 0;
          }
          
          
      default:
          break;    
  }
  
  return ReturnEvent;
}
